Fix HTTP Client with encoded query parameters